--- a/src/de/stevenschwenke/java/javafx/fastread/fastread.fxml
+++ b/src/de/stevenschwenke/java/javafx/fastread/fastread.fxml
@@ -18,9 +18,8 @@
       </children>
     </AnchorPane>
     <Slider fx:id="generalSpeedSlider" layoutX="535.0" layoutY="12.0" orientation="VERTICAL" prefWidth="51.0" />
-    <Button layoutX="159.0" layoutY="130.0" mnemonicParsing="false" onAction="#back" text="back" />
-    <Button layoutX="76.0" layoutY="130.0" mnemonicParsing="false" onAction="#backback" text="backback" />
-    <Button layoutX="14.0" layoutY="130.0" mnemonicParsing="false" onAction="#stop" text="Stop" />
+    <Button layoutX="71.0" layoutY="130.0" mnemonicParsing="false" onAction="#back" text="back" />
+    <Button layoutX="146.0" layoutY="130.0" mnemonicParsing="false" onAction="#stop" text="Pause" />
     <Label fx:id="statusLabel" layoutX="14.0" layoutY="370.0" prefWidth="570.0" text="" />
   </children>
 </AnchorPane>
